--- a/src/Uebung_01a.ipynb
+++ b/src/Uebung_01a.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,6 @@
        "      <th>Raum</th>\n",
        "      <th>Flaeche</th>\n",
        "      <th>Typ</th>\n",
-       "      <th>dV_min</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -89,39 +88,35 @@
        "      <td>Schlafen</td>\n",
        "      <td>13.47</td>\n",
        "      <td>zu</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Wohnen</td>\n",
        "      <td>26.98</td>\n",
        "      <td>zu</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Zimmer_2</td>\n",
        "      <td>13.96</td>\n",
        "      <td>zu</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Zimmer_1</td>\n",
        "      <td>11.89</td>\n",
        "      <td>zu</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Raum  Flaeche Typ  dV_min\n",
-       "0  Schlafen    13.47  zu     NaN\n",
-       "4    Wohnen    26.98  zu     NaN\n",
-       "5  Zimmer_2    13.96  zu     NaN\n",
-       "6  Zimmer_1    11.89  zu     NaN"
+       "       Raum  Flaeche Typ\n",
+       "0  Schlafen    13.47  zu\n",
+       "4    Wohnen    26.98  zu\n",
+       "5  Zimmer_2    13.96  zu\n",
+       "6  Zimmer_1    11.89  zu"
       ]
      },
      "metadata": {},
@@ -221,6 +216,7 @@
     "    columns=['Raum','Flaeche','Typ','dV_min']\n",
     ")\n",
     "df_zu = df_whg[df_whg.Typ=='zu'].copy()\n",
+    "df_zu.drop(columns=['dV_min'],inplace=True)\n",
     "df_ab = df_whg[df_whg.Typ=='ab'].copy()\n",
     "\n",
     "print('Zulufträume')\n",
@@ -238,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +243,7 @@
        "120.8102279"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +268,7 @@
        "20.58274616569973"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,6 +281,34 @@
     "\n",
     "dV_inf = bk.dV_inf(f_inf,A_N,h,n_50,delta_p)\n",
     "dV_inf # Infiltrationsvolumenstrom in m**3/h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dV_ges_ab = df_ab.dV_min.sum()\n",
+    "dV_ges_ab # in m**3/h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Erforderlicher Gesamtvolumenstrom"
    ]
   },
   {
@@ -304,34 +328,6 @@
     }
    ],
    "source": [
-    "dV_ges_ab = df_ab.dV_min.sum()\n",
-    "dV_ges_ab # in m**3/h"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Erforderlicher Gesamtvolumenstrom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "140.0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "dV_ges = max(dV_ges_zu,dV_ges_ab)\n",
     "dV_ges # m**3/h"
    ]
@@ -345,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +350,7 @@
        "119.41725383430027"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -400,12 +396,12 @@
        "      <th>Raum</th>\n",
        "      <th>Flaeche</th>\n",
        "      <th>Typ</th>\n",
-       "      <th>dV_min</th>\n",
        "      <th>f</th>\n",
        "      <th>dV</th>\n",
        "      <th>d_min</th>\n",
        "      <th>d_g</th>\n",
        "      <th>v_g</th>\n",
+       "      <th>p_dyn</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -414,62 +410,62 @@
        "      <td>Schlafen</td>\n",
        "      <td>13.47</td>\n",
        "      <td>zu</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2</td>\n",
        "      <td>26.537168</td>\n",
        "      <td>0.068504</td>\n",
        "      <td>0.08</td>\n",
-       "      <td>1.46650</td>\n",
+       "      <td>1.466500</td>\n",
+       "      <td>1.290374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Wohnen</td>\n",
        "      <td>26.98</td>\n",
        "      <td>zu</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>3</td>\n",
        "      <td>39.805751</td>\n",
        "      <td>0.083900</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>1.40784</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>1.738075</td>\n",
+       "      <td>1.812542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Zimmer_2</td>\n",
        "      <td>13.96</td>\n",
        "      <td>zu</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2</td>\n",
        "      <td>26.537168</td>\n",
        "      <td>0.068504</td>\n",
        "      <td>0.08</td>\n",
-       "      <td>1.46650</td>\n",
+       "      <td>1.466500</td>\n",
+       "      <td>1.290374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Zimmer_1</td>\n",
        "      <td>11.89</td>\n",
        "      <td>zu</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2</td>\n",
        "      <td>26.537168</td>\n",
        "      <td>0.068504</td>\n",
        "      <td>0.08</td>\n",
-       "      <td>1.46650</td>\n",
+       "      <td>1.466500</td>\n",
+       "      <td>1.290374</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Raum  Flaeche Typ  dV_min  f         dV     d_min   d_g      v_g\n",
-       "0  Schlafen    13.47  zu     NaN  2  26.537168  0.068504  0.08  1.46650\n",
-       "4    Wohnen    26.98  zu     NaN  3  39.805751  0.083900  0.10  1.40784\n",
-       "5  Zimmer_2    13.96  zu     NaN  2  26.537168  0.068504  0.08  1.46650\n",
-       "6  Zimmer_1    11.89  zu     NaN  2  26.537168  0.068504  0.08  1.46650"
+       "       Raum  Flaeche Typ  f         dV     d_min   d_g       v_g     p_dyn\n",
+       "0  Schlafen    13.47  zu  2  26.537168  0.068504  0.08  1.466500  1.290374\n",
+       "4    Wohnen    26.98  zu  3  39.805751  0.083900  0.09  1.738075  1.812542\n",
+       "5  Zimmer_2    13.96  zu  2  26.537168  0.068504  0.08  1.466500  1.290374\n",
+       "6  Zimmer_1    11.89  zu  2  26.537168  0.068504  0.08  1.466500  1.290374"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,8 +481,11 @@
     "hour = 3600 # 1 Stunde in Sekunden\n",
     "\n",
     "df_zu['d_min'] = np.sqrt(4*df_zu.dV/(hour*np.pi*v))\n",
-    "df_zu['d_g'] = pd.Series([0.080,0.100,0.080,0.080],index=idx_zu)\n",
+    "df_zu['d_g'] = df_zu.apply(lambda x: bk.norm_durchmesser(1000*x.d_min)/1000,axis=1)\n",
     "df_zu['v_g'] = (df_zu.d_min/df_zu.d_g)**2*v\n",
+    "\n",
+    "rho = 1.2 # kg/m**3\n",
+    "df_zu['p_dyn'] = rho/2*(df_zu.v_g)**2\n",
     "df_zu"
    ]
   },
@@ -499,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -531,6 +530,7 @@
        "      <th>d_min</th>\n",
        "      <th>d_g</th>\n",
        "      <th>v_g</th>\n",
+       "      <th>p_dyn</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -542,8 +542,9 @@
        "      <td>45.0</td>\n",
        "      <td>38.384117</td>\n",
        "      <td>0.082388</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>1.357560</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>1.676001</td>\n",
+       "      <td>1.685387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -555,6 +556,7 @@
        "      <td>0.061408</td>\n",
        "      <td>0.08</td>\n",
        "      <td>1.178438</td>\n",
+       "      <td>0.833230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -564,8 +566,9 @@
        "      <td>45.0</td>\n",
        "      <td>38.384117</td>\n",
        "      <td>0.082388</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>1.357560</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>1.676001</td>\n",
+       "      <td>1.685387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -577,20 +580,27 @@
        "      <td>0.061408</td>\n",
        "      <td>0.08</td>\n",
        "      <td>1.178438</td>\n",
+       "      <td>0.833230</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Raum  Flaeche Typ  dV_min         dV     d_min   d_g       v_g\n",
-       "1          Bad     9.06  ab    45.0  38.384117  0.082388  0.10  1.357560\n",
-       "2  Abstellraum     2.57  ab    25.0  21.324510  0.061408  0.08  1.178438\n",
-       "3       Kochen     7.16  ab    45.0  38.384117  0.082388  0.10  1.357560\n",
-       "7           WC     1.45  ab    25.0  21.324510  0.061408  0.08  1.178438"
+       "          Raum  Flaeche Typ  dV_min         dV     d_min   d_g       v_g  \\\n",
+       "1          Bad     9.06  ab    45.0  38.384117  0.082388  0.09  1.676001   \n",
+       "2  Abstellraum     2.57  ab    25.0  21.324510  0.061408  0.08  1.178438   \n",
+       "3       Kochen     7.16  ab    45.0  38.384117  0.082388  0.09  1.676001   \n",
+       "7           WC     1.45  ab    25.0  21.324510  0.061408  0.08  1.178438   \n",
+       "\n",
+       "      p_dyn  \n",
+       "1  1.685387  \n",
+       "2  0.833230  \n",
+       "3  1.685387  \n",
+       "7  0.833230  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,33 +611,11 @@
     "df_ab['dV'] = df_ab.dV_min/df_ab.dV_min.sum()*dV_L\n",
     "\n",
     "df_ab['d_min'] = np.sqrt(4*df_ab.dV/(hour*np.pi*v))\n",
-    "df_ab['d_g'] = pd.Series([0.100,0.080,0.100,0.080],index=idx_ab)\n",
+    "df_ab['d_g'] = df_ab.apply(lambda x: bk.norm_durchmesser(1000*x.d_min)/1000,axis=1)\n",
     "df_ab['v_g'] = (df_ab.d_min/df_ab.d_g)**2*v\n",
+    "df_ab['p_dyn'] = rho/2*(df_ab.v_g)**2\n",
     "\n",
     "df_ab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "115"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "norm_durchmesser = np.array([65,80,100,115,125,150,180])\n",
-    "\n",
-    "d_0 = 101\n",
-    "norm_durchmesser[np.where(d_0 <= norm_durchmesser)[0][0]]"
    ]
   }
  ],
