Changes to be committed: new file:   src/Belueftungskonzept deleted:    "src/Bel\303\274ftungskonzept.ipynb" modified:   src/Uebung_01a.ipynb modified:   src/bel_konzept.py

--- a/src/Uebung_01a.ipynb
+++ b/src/Uebung_01a.ipynb
@@ -46,7 +46,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Raum</th>\n",
+       "      <th>Flaeche</th>\n",
+       "      <th>Typ</th>\n",
+       "      <th>dV_min</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Schlafen</td>\n",
+       "      <td>13.47</td>\n",
+       "      <td>zu</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bad</td>\n",
+       "      <td>9.06</td>\n",
+       "      <td>ab</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Abstellraum</td>\n",
+       "      <td>2.57</td>\n",
+       "      <td>ab</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Kochen</td>\n",
+       "      <td>7.16</td>\n",
+       "      <td>ab</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Wohnen</td>\n",
+       "      <td>26.98</td>\n",
+       "      <td>zu</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Zimmer_2</td>\n",
+       "      <td>13.96</td>\n",
+       "      <td>zu</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Zimmer_1</td>\n",
+       "      <td>11.89</td>\n",
+       "      <td>zu</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>WC</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>ab</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Flur</td>\n",
+       "      <td>9.07</td>\n",
+       "      <td>--</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Raum  Flaeche Typ  dV_min\n",
+       "0     Schlafen    13.47  zu     NaN\n",
+       "1          Bad     9.06  ab    45.0\n",
+       "2  Abstellraum     2.57  ab    25.0\n",
+       "3       Kochen     7.16  ab    45.0\n",
+       "4       Wohnen    26.98  zu     NaN\n",
+       "5     Zimmer_2    13.96  zu     NaN\n",
+       "6     Zimmer_1    11.89  zu     NaN\n",
+       "7           WC     1.45  ab    25.0\n",
+       "8         Flur     9.07  --     NaN"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_whg = pd.DataFrame(\n",
+    "    [('Schlafen',13.47,'zu'),\n",
+    "     ('Bad',9.06,'ab',45),\n",
+    "     ('Abstellraum',2.57,'ab',25),\n",
+    "     ('Kochen',7.16,'ab',45),\n",
+    "     ('Wohnen',26.98,'zu'),\n",
+    "     ('Zimmer_2',13.96,'zu'),\n",
+    "     ('Zimmer_1',11.89,'zu'),\n",
+    "     ('WC',1.45,'ab',25),\n",
+    "     ('Flur',9.07,'--')\n",
+    "    ],\n",
+    "    columns=['Raum','Flaeche','Typ','dV_min']\n",
+    ")\n",
+    "df_whg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +256,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "df_zu = df_whg[df_whg.Typ=='zu'].copy()\n",
+    "df_zu.drop(columns=['dV_min'],inplace=True)\n",
+    "print('Zulufträume')\n",
+    "display(df_zu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -202,25 +350,7 @@
     }
    ],
    "source": [
-    "df_whg = pd.DataFrame(\n",
-    "    [('Schlafen',13.47,'zu'),\n",
-    "     ('Bad',9.06,'ab',45),\n",
-    "     ('Abstellraum',2.57,'ab',25),\n",
-    "     ('Kochen',7.16,'ab',45),\n",
-    "     ('Wohnen',26.98,'zu'),\n",
-    "     ('Zimmer_2',13.96,'zu'),\n",
-    "     ('Zimmer_1',11.89,'zu'),\n",
-    "     ('WC',1.45,'ab',25),\n",
-    "     ('Flur',9.07,'--')\n",
-    "    ],\n",
-    "    columns=['Raum','Flaeche','Typ','dV_min']\n",
-    ")\n",
-    "df_zu = df_whg[df_whg.Typ=='zu'].copy()\n",
-    "df_zu.drop(columns=['dV_min'],inplace=True)\n",
     "df_ab = df_whg[df_whg.Typ=='ab'].copy()\n",
-    "\n",
-    "print('Zulufträume')\n",
-    "display(df_zu)\n",
     "print('Ablufträume')\n",
     "display(df_ab)"
    ]
@@ -229,12 +359,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zuluftvolumenstrom, Infiltrationsvolumenstrom und Abluftvolumenstrom ermitteln:"
+    "Zuluftvolumenstrom, Abluftvolumenstrom und Infiltrationsvolumenstrom ermitteln:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +373,7 @@
        "120.8102279"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,33 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20.58274616569973"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f_inf = 0.4 # Mehrgeschossig, Installationsschacht\n",
-    "n_50 = 1 # h**(-1)\n",
-    "h = 2.50 # m\n",
-    "delta_p = 5 # Mehrgeschossig, Windschwach\n",
-    "\n",
-    "dV_inf = bk.dV_inf(f_inf,A_N,h,n_50,delta_p)\n",
-    "dV_inf # Infiltrationsvolumenstrom in m**3/h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +398,7 @@
        "140.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +426,7 @@
        "140.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,12 +440,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Infiltrationsvolumenstrom:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.58274616569973"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_inf = 0.4 # Mehrgeschossig, Installationsschacht\n",
+    "n_50 = 1 # h**(-1)\n",
+    "h = 2.50 # m\n",
+    "delta_p = 5 # Mehrgeschossig, Windschwach\n",
+    "\n",
+    "dV_inf = bk.dV_inf(f_inf,A_N,h,n_50,delta_p)\n",
+    "dV_inf # Infiltrationsvolumenstrom in m**3/h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Erforderlicher Lüftungsvolumenstrom am Ventilator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +487,7 @@
        "119.41725383430027"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +602,7 @@
        "6  Zimmer_1    11.89  zu  2  26.537168  0.068504  0.08  1.466500  1.290374"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +737,7 @@
        "7  0.833230  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
