Changes to be committed: renamed:    src/Belueftungskonzept -> src/Belueftungskonzept.ipynb modified:   src/Feuchte_Luft/Untitled 1.ipynb modified:   src/Uebung_01a.ipynb modified:   src/__pycache__/bel_konzept.cpython-36.pyc

--- a/src/Belueftungskonzept.ipynb
+++ b/src/Belueftungskonzept.ipynb
@@ -41,7 +41,7 @@
     "\\begin{align}\n",
     "  {\\dot V}_\\text{FL} &=\n",
     "  \\begin{cases}\n",
-    "    0.3 \\,{\\dot V}_\\text{ges,zu} & \\text{Wärmedämmun mindestens nach WSchV95}\\\\\n",
+    "    0.3 \\,{\\dot V}_\\text{ges,zu} & \\text{Wärmedämmung mindestens nach WSchV95}\\\\\n",
     "    0.4 \\,{\\dot V}_\\text{ges,zu} & \\text{sonst}\n",
     "  \\end{cases}\n",
     "\\end{align}"
@@ -93,7 +93,7 @@
     }
    },
    "source": [
-    "Der gesamte erforderliche Volumenstrom ergibt sich dann als Maximum der zuvor berechneten Volumenströme:\n",
+    "Der erforderliche Gesamtvolumenstrom ergibt sich als Maximum der zuvor berechneten Volumenströme:\n",
     "\n",
     "$$\n",
     "  {\\dot V}_\\text{ges} = \\max\\left({\\dot V}_\\text{ges,zu},{\\dot V}_\\text{ges,ab}\\right)\n",
@@ -115,8 +115,17 @@
     "  \\left(\n",
     "    \\dfrac{\\Delta p}{50\\,\\text{Pa}}\n",
     "  \\right)^{0.667}\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Dabei ist der Infiltrationsfaktor $f_\\text{inf}$ gegeben durch\n",
     "\n",
     "\\begin{align}\n",
@@ -161,7 +170,7 @@
     "Ein Belüftungskonzept ist nötig, wenn der Infiltrationsvolumenstrom nicht ausreicht, um den Feuchteschutz sicherzustellen:\n",
     "\n",
     "$$\n",
-    "  {\\dot V}_\\text{FL} < {\\dot V}_\\text{inf}\n",
+    "  {\\dot V}_\\text{FL} > {\\dot V}_\\text{inf}\n",
     "  \\implies\\quad\n",
     "  \\text{Belüftungskonzept ist nötig}\n",
     "$$"
@@ -181,6 +190,89 @@
     "  {\\dot V}_\\text{L} = {\\dot V}_\\text{ges,zu} - {\\dot V}_\\text{inf}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Nachdem der Ventilatorvolumenstrom ${\\dot V}_\\text{L}$ berechnet wurde, ist die Verteilung der Zuluftvolumenströme auf die Zulufträume und der Abluftvolumenströme auf die Ablufträume durchzuführen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Verteilung des Zuluftvolumenstroms auf die Zulufträume"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Verteilung des Zuluftvolumenstroms auf die Zulufträume erfolgt mit Hilfe von Faktoren nach der Formel\n",
+    "\n",
+    "$$\n",
+    "  {\\dot V}_i = \\dfrac{f_i}{\\sum_{j\\in\\text{zu}} f_j}\\,{\\dot V}_i \\quad\n",
+    "  \\text{für}\\quad i\\in\\text{zu}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bei der Auswahl der Faktoren besteht eine gewisse Freiheit, mit der Anpassungen an die jeweilige Wohnung vorgenommen werden können:\n",
+    "\n",
+    "$$\n",
+    "  f = \n",
+    "  \\begin{cases}\n",
+    "    3\\,(\\pm 0.5) & \\text{Wohnzimmer} \\\\\n",
+    "    2\\,(\\pm 1.0) & \\text{Schlaf- und Kinderzimmer}\\\\\n",
+    "    1.5\\,(\\pm 0.5) & \\text{Ess-, Gäste- und Arbeitszimmer}\n",
+    "  \\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Strömungsgeschwindigkeit in zu Zu- und Abluftkanälen soll $v \\approx 1.5\\cdots 2.5\\,\\frac{m}{s}$ nicht überschreiten. Als Richtwert kann man in Auslegungen von $v=2\\,\\dfrac{m}{s}$ ausgehen. Damit ergeben sich die erforderlichen Querschnitte gemäß\n",
+    "\n",
+    "\\begin{align}\n",
+    "  A_i &= \\dfrac{{\\dot V}_i}{v},\\quad\\text{bzw.}\\\\[2ex]\n",
+    "  d_i &= \n",
+    "    \\sqrt{\\dfrac{4\\,{\\dot V}_i}{\\pi\\,v}} \\quad\\text{für runde Querschnitte}\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die gewählten Querschnitte müssen mindestens so groß sein, wie die berechneten. Nach der Auswahl von Querschnitten $A_i'$ bzw. $d_i'$ ist die wirkliche Geschwindigkeit $v_i'$ zu ermitteln. Hierzu können die Proportionalitätsbeziehungen\n",
+    "\n",
+    "\\begin{align}\n",
+    "  v_i' &= \\dfrac{A_i}{A_i'}\\, v_i, \\quad\\text{bzw.}\\\\[2ex]\n",
+    "  v_i' &= \n",
+    "    \\left(\n",
+    "      \\dfrac{d_i}{d_i'}\n",
+    "    \\right)^2\\, v_i \\quad\\text{für runde Querschnitte}\n",
+    "\\end{align}\n",
+    "\n",
+    "benutzt werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
