--- a/src/Uebung_01a.ipynb
+++ b/src/Uebung_01a.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Um nicht unnötig oft zu speichern:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -27,6 +34,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import der benutzten Module:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -41,12 +55,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataframes für die Wohnung aufstellen und in Zu- und Ablufträume separieren:"
+    "`pd.Dataframe` für die Wohnung aufstellen.\n",
+    "\n",
+    "Hier wird zunächst für jeden Raum die Bezeichnung `Raum`, die Fläche in $m^2$ `Flaeche`, der Raumtyp `Typ` mit den Ausprägungen Zuluftraum (`zu`), Abluftraum (`ab`) oder keine Zuordnung (`--`) vorgenommen. Weiter wird bereits für die Ablufträume der erforderliche Mindestvolumenstrom `dV_min` eingetragen."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +173,7 @@
        "8         Flur     9.07  --     NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,8 +196,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anhand des Raumtyps wird `df_whg` in zwei Teile zerlegt. In `df_zu` sind nur die Zulufträume aufgenommen, in `df_ab` nur die Ablufträume.\n",
+    "\n",
+    "Für die Zulufträume gibt es kein `dV_min`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -357,14 +382,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "Zuluftvolumenstrom, Abluftvolumenstrom und Infiltrationsvolumenstrom ermitteln:"
+    "Im nächsten Schritt wird die Nutzfläche mittels `df_whg` und daraus der erforderliche Gesamtzuluftvolumenstrom `dV_ges_zu` ermittelt."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +402,7 @@
        "120.8102279"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,8 +417,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aus `df_ab` wird der erforderliche Gesamtabluftvolumenstrom ermittelt."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +434,7 @@
        "140.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,12 +448,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Erforderlicher Gesamtvolumenstrom"
+    "Der erforderlicher Gesamtvolumenstrom ist das Maximum der oben berechneten Volumenströme:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +462,7 @@
        "140.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,12 +476,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Infiltrationsvolumenstrom:"
+    "Der Infiltrationsvolumenstrom wird nach DIN 1946-6 abgeschätzt. \n",
+    "\n",
+    "Dazu müssen der Infiltrationsfaktor `f_inf`, die Luftwechselzahl `n_50` in $h^{-1}$ und der Winddruck auf das Gebäude `delta_p` angegeben werden."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +492,7 @@
        "20.58274616569973"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,12 +511,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Erforderlicher Lüftungsvolumenstrom am Ventilator"
+    "Ein Belüftungskonzept ist erforderlich, wenn der Infiltrationsvolumenstrom `dV_inf` nicht genügt, um den Feuchteschutz sicherzustellen. Dabei hängt der Luftvolumenstrom zum Feuchteschutz vom Wärmedämmstandard ab:\n",
+    "\n",
+    "\\begin{align}\n",
+    "  {\\dot V}_\\text{FL} &=\n",
+    "  \\begin{cases}\n",
+    "    0.3 \\,{\\dot V}_\\text{ges,zu} & \\text{Wärmedämmung mindestens nach WSchV95}\\\\\n",
+    "    0.4 \\,{\\dot V}_\\text{ges,zu} & \\text{sonst}\n",
+    "  \\end{cases}\n",
+    "\\end{align}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Belüftungskonzept ist erforderlich: Ja'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"Belüftungskonzept ist erforderlich: {'Ja' if 0.3*dV_ges_zu > dV_inf else 'Nein'}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Der erforderliche Lüftungsvolumenstrom am Ventilator ergibt sich als Differenz aus `dV_ges` und `dV_inf`. Dieser Volumenstrom ist von den Ventilatoren zu transportieren."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +560,7 @@
        "119.41725383430027"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,12 +574,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Verteilung der Zuluft auf die Zulufträume:"
+    "Die Verteilung des Zuluftvolumenstroms auf die Zulufträume erfolgt mit Hilfe von Faktoren, die in der DIN 1946-6 festgelegt sind. Diese Faktoren werden `df_zu` hinzugefügt. Nachdem die Volumenströme ermittelt sind, kann die Dimensionierung der Zuluftkanäle erfolgen. Dazu ist eine Richtgeschwindigkeit `v` anzugeben, die nicht überschritten werden soll.\n",
+    "\n",
+    "Die tatsächliche Geschwindigkeit und der dynamische Druck in den Zuluftkanälen können ebenfalls angegeben werden, wenn die Dichte der Zuluft bekannt ist."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +677,7 @@
        "6  Zimmer_1    11.89  zu  2  26.537168  0.068504  0.08  1.466500  1.290374"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,12 +705,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Verteilung der Abluft auf die Ablufträume"
+    "Verteilung der Abluft auf die Ablufträume erfolgt analog. Hier übernehmen die minimalen Abluftvolumenströme `dV_min` die Rolle der Faktoren."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +812,7 @@
        "7  0.833230  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
