Changes to be committed: modified:   src/Belueftungskonzept.ipynb modified:   src/Feuchte_Luft/Untitled 1.ipynb modified:   src/Uebung_01a.ipynb

--- a/src/Belueftungskonzept.ipynb
+++ b/src/Belueftungskonzept.ipynb
@@ -204,26 +204,38 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Verteilung des Zuluftvolumenstroms auf die Zulufträume"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "Die Verteilung des Zuluftvolumenstroms auf die Zulufträume erfolgt mit Hilfe von Faktoren nach der Formel\n",
     "\n",
     "$$\n",
-    "  {\\dot V}_i = \\dfrac{f_i}{\\sum_{j\\in\\text{zu}} f_j}\\,{\\dot V}_i \\quad\n",
+    "  {\\dot V}_i = \\dfrac{f_i}{\\sum_{j\\in\\text{zu}} f_j}\\,{\\dot V}_L \\quad\n",
     "  \\text{für}\\quad i\\in\\text{zu}\n",
     "$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Bei der Auswahl der Faktoren besteht eine gewisse Freiheit, mit der Anpassungen an die jeweilige Wohnung vorgenommen werden können:\n",
     "\n",
@@ -239,7 +251,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Die Strömungsgeschwindigkeit in zu Zu- und Abluftkanälen soll $v \\approx 1.5\\cdots 2.5\\,\\frac{m}{s}$ nicht überschreiten. Als Richtwert kann man in Auslegungen von $v=2\\,\\dfrac{m}{s}$ ausgehen. Damit ergeben sich die erforderlichen Querschnitte gemäß\n",
     "\n",
@@ -252,7 +268,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Die gewählten Querschnitte müssen mindestens so groß sein, wie die berechneten. Nach der Auswahl von Querschnitten $A_i'$ bzw. $d_i'$ ist die wirkliche Geschwindigkeit $v_i'$ zu ermitteln. Hierzu können die Proportionalitätsbeziehungen\n",
     "\n",
@@ -268,14 +288,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Verteilung des Abluftvolumenstroms auf die Ablufträume"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Die Verteilung des Abluftvolumenstroms auf die Ablufträume erfolgt analog zu den Zulufträumen. Die Faktoren $f_i$ werden dabei durch die minimal erforderlichen Abluftvolumenströme `dV_min` jedes Abluftraumes ermittelt.\n",
+    "\n",
+    "Es ist\n",
+    "\n",
+    "$$\n",
+    "  {\\dot V}_i = \\dfrac{\\dot V_{i,\\min}}{\\sum_{j\\in\\text{ab}} \\dot V_{j,\\min}}\\,{\\dot V}_L \\quad\n",
+    "  \\text{für}\\quad i\\in\\text{ab}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Die weiteren Berechnungen erfolgen analog zu den Berechnungen der Zuluftvolumenströme."
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "python 3.6",
    "language": "python",
