--- a/src/Uebung_01a.ipynb
+++ b/src/Uebung_01a.ipynb
@@ -210,11 +210,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Zulufträume\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Zulufträume:'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -286,8 +288,7 @@
    "source": [
     "df_zu = df_whg[df_whg.Typ=='zu'].copy()\n",
     "df_zu.drop(columns=['dV_min'],inplace=True)\n",
-    "print('Zulufträume')\n",
-    "display(df_zu)"
+    "display('Zulufträume:', df_zu)"
    ]
   },
   {
@@ -296,11 +297,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ablufträume\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Ablufträume:'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -376,8 +379,7 @@
    ],
    "source": [
     "df_ab = df_whg[df_whg.Typ=='ab'].copy()\n",
-    "print('Ablufträume')\n",
-    "display(df_ab)"
+    "display('Ablufträume:', df_ab)"
    ]
   },
   {
@@ -530,7 +532,7 @@
     {
      "data": {
       "text/plain": [
-       "'Belüftungskonzept ist erforderlich: Ja'"
+       "'Ein Belüftungskonzep ist nötig'"
       ]
      },
      "execution_count": 10,
@@ -539,7 +541,7 @@
     }
    ],
    "source": [
-    "f\"Belüftungskonzept ist erforderlich: {'Ja' if 0.3*dV_ges_zu > dV_inf else 'Nein'}\""
+    "f\"Ein Belüftungskonzep ist{' nicht ' if 0.3*dV_ges_zu <= dV_inf else ' '}nötig\""
    ]
   },
   {
