--- a/src/Belueftungskonzept.ipynb
+++ b/src/Belueftungskonzept.ipynb
@@ -257,7 +257,7 @@
     }
    },
    "source": [
-    "Die Strömungsgeschwindigkeit in zu Zu- und Abluftkanälen soll $v \\approx 1.5\\cdots 2.5\\,\\frac{m}{s}$ nicht überschreiten. Als Richtwert kann man in Auslegungen von $v=2\\,\\dfrac{m}{s}$ ausgehen. Damit ergeben sich die erforderlichen Querschnitte gemäß\n",
+    "Die Strömungsgeschwindigkeit in zu Zu- und Abluftkanälen soll $v \\approx 1.5\\cdots 2.5\\,\\frac{m}{s}$ nicht überschreiten. Als Richtwert kann man in Auslegungen von $v=2\\,\\frac{m}{s}$ ausgehen. Damit ergeben sich die erforderlichen Querschnitte gemäß\n",
     "\n",
     "\\begin{align}\n",
     "  A_i &= \\dfrac{{\\dot V}_i}{v},\\quad\\text{bzw.}\\\\[2ex]\n",
